--- a/index.html
+++ b/index.html
@@ -1,1 +1,61 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>My Dummy Website</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            line-height: 1.6;
+            margin: 0;
+            padding: 20px;
+            background-color: #f4f4f4;
+        }
+        header {
+            background: #35424a;
+            color: white;
+            padding: 20px;
+            text-align: center;
+            margin-bottom: 20px;
+        }
+        .container {
+            width: 80%;
+            margin: auto;
+            overflow: hidden;
+        }
+        footer {
+            background: #35424a;
+            color: white;
+            text-align: center;
+            padding: 10px;
+            margin-top: 20px;
+        }
+    </style>
+</head>
+<body>
+    <header>
+        <h1>Welcome to My Dummy Website dev</h1>
+    </header>
 
+    <div class="container">
+        <h2>About This Page</h2>
+        <p>This is a simple dummy HTML page that you can use as a starting point for your project.</p>
+        
+        <h2>Features</h2>
+        <ul>
+            <li>Basic HTML5 structure</li>
+            <li>Simple CSS styling</li>
+            <li>Responsive design</li>
+            <li>Placeholder content</li>
+        </ul>
+        
+        <h2>Contact</h2>
+        <p>Email: dummy@example.com</p>
+    </div>
+
+    <footer>
+        <p>&copy; 2023 Dummy Website. All rights reserved.</p>
+    </footer>
+</body>
+</html>
